--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -20,7 +20,6 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-
             <ImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
@@ -44,6 +43,13 @@
                     android:layout_height="100dp"
                     android:id="@+id/iv_test4"
                     android:layout_marginTop="10dp" />
+
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/iv_test5"
+                    android:layout_marginTop="10dp" />
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
