--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,4 +45,15 @@
             android:text="Image"
             android:id="@+id/btn_img" />
 
+    <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_img"
+            android:textSize="14sp"
+            android:text="拍照，图库"
+            android:id="@+id/btn_img_sel" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
