--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragment.FragmentActivity">
+        tools:context=".fragment.HomeActivity">
     <FrameLayout android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:name="com.zh.kotlin.fragment.FateFragment"
